--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     margin: 0 2px;
 }
 
-.monster-card .form-check-input {
+.adversary-card .form-check-input {
     min-width: 1.2em;
     min-height: 1.2em;
 }
@@ -12,7 +12,7 @@ details > summary {
     font-weight: bold;
 }
 
-.monster-image {
+.adversary-image {
     max-height: 200px;
     width: 100%;
     object-fit: cover;
